--- a/authentication on firebase/authentication/src/Pages/Home.css
+++ b/authentication on firebase/authentication/src/Pages/Home.css
@@ -2,7 +2,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -15,6 +15,7 @@ body{
 }
 
 .form{
+    /* display: flex; */
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
